syntax = "proto3";

package xwi88.log;

option go_package = ".;pb";

message BusLog {
    string request_id = 1;
    int64 request_timestamp = 2;
    double cost_msec = 3;
    int32 http_status_code = 4;
    Request request = 5;
    Response response = 6;
    string request_time = 7;
    string response_time = 8;
}

message Request {
    string request_id = 1;
    string host = 2;
    string client_ip = 3;
    string remote_url = 4;
    string method = 5;
    map<string, ListOfString> header = 6;
    RequestURL url = 7;
    RequestBody body = 8;
    bytes body_origin = 9;
    string token_md5 = 10; // token_md5
    string channel = 11;
}

message ListOfString {
    repeated string Item = 1;
}
message RequestURL {
    string path = 1;
    string raw_query = 2;
}

message RequestBody {
}

message Response {
    string request_id = 1;
    int32 code = 2;
    string message = 3;
    bytes data = 4;
}
